// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseSection should render default basic section 1`] = `
.c0 .section-content {
  padding-left: 24px;
  padding-right: 24px;
}

.c0 .section-content--noHorizontalSpacing {
  padding-left: 0;
  padding-right: 0;
}

@media (min-width:800px) {
  .c0 .section-content {
    margin-left: auto;
    margin-right: auto;
    max-width: 662px;
  }

  .c0 .section-content.section-content--large {
    max-width: 1016px;
  }
}

<div
  className="c0"
  role="presentation"
>
  <div
    className="section-content"
  >
    default section
  </div>
</div>
`;

exports[`BaseSection should render non-default section 1`] = `
.c0 .section-content {
  padding-left: 24px;
  padding-right: 24px;
}

.c0 .section-content--noHorizontalSpacing {
  padding-left: 0;
  padding-right: 0;
}

@media (min-width:800px) {
  .c0 .section-content {
    margin-left: auto;
    margin-right: auto;
    max-width: 662px;
  }

  .c0 .section-content.section-content--large {
    max-width: 1016px;
  }
}

<div
  className="c0"
  role="presentation"
>
  <article
    className="section-content section-content--large"
    role="contentinfo"
  >
    large section
  </article>
</div>
`;
